clippy_session2.txt
    Checking paraphym_candle v0.1.0 (/Volumes/samsung_t9/paraphym/packages/candle)
   Compiling sweetmcp-pingora v0.3.1 (/Volumes/samsung_t9/paraphym/packages/sweetmcp/packages/pingora)
error[E0412]: cannot find type `CandleFormatter` in this scope
  --> packages/candle/src/domain/chat/formatting.rs:32:29
   |
32 | type FormatterWithStream = (CandleFormatter, Pin<Box<dyn Stream<Item = FormattingEvent> + Send>>);
   |                             ^^^^^^^^^^^^^^^ not found in this scope

For more information about this error, try `rustc --explain E0412`.
error: could not compile `paraphym_candle` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `paraphym_candle` (lib test) due to 1 previous error
